# clox

./: .gitignore  CMakeLists.txt  CMakelists.txt  LICENSE  Makefile  README.md  clang-format.txt  create_big_file.sh
examples/: conditionals.lox  context.lox  control_flow.lox  fib.lox  first.lox  functions.lox  variables.lox
include/: chunk.h  common.h  compiler.h  debug.h  line.h  memory.h  object.h  scanner.h  stack.h  table.h  value.h  vm.h
src/: chunk.c  compiler.c  debug.c  line.c  main.c  memory.c  object.c  scanner.c  stack.c  table.c  value.c  vm.c
test/limit/: no_reuse_constants.lox  too_many_constants.lox  too_many_locals.lox
tool/: go.mod  main.go
tool/suite/: suite.go
